less row spacing on mobile fixes #30

--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -88,8 +88,13 @@ h3 {
 }
 
 .row {
-	margin-bottom: 15px;
+	margin-bottom: 0;
 	@media (min-width: $screen-xs-min) {
+		& {
+			margin-bottom: 15px;
+		}
+	}
+	@media (min-width: $screen-md-min) {
 		& {
 			margin-bottom: 30px;
 		}
